Icones em inputs e criação de layout de suplementos

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,8 @@
     </div>
 </div>
 <div class="searchFlxNav">
-   
+    <span class="p-input-icon-right span">
+        <i class="pi pi-search"></i>
         <input type="text" pInputText class="searchInput" placeholder="O que você procura ?" />
- 
+    </span>
 </div>
