--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -1,7 +1,15 @@
 <div class="mainDiv">
     <div class="tituloFiltro">
         <h1 class="mainTitle">Suplementos</h1>
-        <input type="text" pInputText class="filterInput" placeholder="Filtrar" />
+        <span class="p-input-icon-right">
+            <i class="pi pi-filter"></i>
+            <input type="text" pInputText class="filterInput" placeholder="Filtrar" />
+    </span>
     </div>
-    <div class="mainGrid"></div>
+    <div class="mainGrid">
+        <div class="box">
+            
+        </div>
+    </div>
+
 </div>
