--- a/src/app/suplementos/suplementos.component.scss
+++ b/src/app/suplementos/suplementos.component.scss
@@ -1,15 +1,34 @@
 .mainDiv {
     padding : 3%;
+    height: 100%;
+    width: 100%;
+}
+
+.mainGrid {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    width: 100%;
+    height: 35vh;
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    height: 70%;
+    background-color: #489682;
+    border-radius: 10px;
 }
 
 .mainTitle {
     font-size: 3.5em;
     color: #489682;
     font-weight: 200;
+    border-bottom: 3px solid #FFB84D;
 }
 
 .filterInput {
-    width: 15%;
+    width: 100%;
 }
 
 .tituloFiltro {
