testes de grid nos produtos

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,9 @@
             <i class="pi pi-align-justify navIcons"></i>
         </div>
         <h1 class="GoFit">GoFit</h1>
-        <div></div>
+        <div>
+            <h1 class="slogan">Seja o melhor de você.</h1>
+        </div>
         <div class="subFlex2">
             <i class="pi pi-shopping-cart navIcons"></i>
             <i class="pi pi-user navIcons"></i>
