--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -8,8 +8,14 @@
     </div>
     <div class="mainGrid">
         <div class="box">
-            
+            <div class="fotoProduto"></div>
+            <div class="informacoes">
+                <h1 class="nomeProduto">Creatina</h1>
+                <h1 class="pesoProduto">250g</h1>
+                <h1 class="objetivoProduto">100,00 R$</h1>
+            </div>
         </div>
+        
     </div>
 
 </div>
