--- a/src/app/suplementos/suplementos.component.scss
+++ b/src/app/suplementos/suplementos.component.scss
@@ -18,13 +18,14 @@
     height: 70%;
     background-color: #489682;
     border-radius: 10px;
+    padding: 5%;
 }
 
 .mainTitle {
     font-size: 3.5em;
     color: #489682;
     font-weight: 200;
-    border-bottom: 3px solid #FFB84D;
+    border-bottom: 4px solid #FFB84D;
 }
 
 .filterInput {
@@ -35,4 +36,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.fotoProduto {
+    width: 60%;
+    height: 80%;
+    background-color: #cecece;
+    border-radius: 5px;
+}
+
+.informacoes {
+    width: 40%;
+    height: 80%;
+    display: flex;
+    padding-left: 4%;
+    flex-direction: column;
+}
+
+.nomeProduto {
+    font-size: 1.4em;
+    color: #FFf;
+}
+
+.pesoProduto {
+    font-size: 1.2em;
+    color: #FFf;
+}
+
+.objetivoProduto {
+    font-size: 1.2em;
+    color: #FFf;
 }
