--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -10,12 +10,22 @@
         <div class="box">
             <div class="fotoProduto"></div>
             <div class="informacoes">
-                <h1 class="nomeProduto">Creatina</h1>
-                <h1 class="pesoProduto">250g</h1>
-                <h1 class="objetivoProduto">100,00 R$</h1>
+                <p class="nomeProduto">Creatina</p>
+                <p class="descProduto">250g</p>
+                <p class="precoProduto">100,00 R$</p>
+            </div>
+            <button pButton type="button" label="Click" class="btnAddCarrinho"></button>
+        </div>
+        <div class="box">
+            <div class="fotoProduto"></div>
+            <div class="informacoes">
             </div>
         </div>
-        
+        <div class="box">
+            <div class="fotoProduto"></div>
+            <div class="informacoes">
+            </div>
+        </div>
     </div>
 
 </div>
