mudanças nos icones da nav, e tamanho do input 'search'

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -48,6 +48,7 @@
 .navIcons {
     font-size: 30px;
     color: #FFB84D;
+    cursor: pointer;
 }
 
 .gridNav {
@@ -69,10 +70,10 @@
 
 
 .span {
-    width: 30%;
+    width: 40%;
 }
 
 .searchInput {
     width: 100%;
-    height: 2em;
+    height: 2.3em;
 }
