--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="flxNav">
     <div class="gridNav">
         <div class="subFlex">
-            <i class="pi pi-align-justify navIcons menuIcon"></i>
+            <i class="pi pi-align-justify navIcons menuIcon" onclick="openNav()"></i>
         </div>
         <h1 class="GoFit">GoFit</h1>
         <div>
