estiliza paginas gerais, mas principalmente carrinho

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
         <div>
         </div>
         <div class="subFlex2">
-            <i class="pi pi-shopping-cart navIcons"></i>
+            <i class="pi pi-shopping-cart navIcons" (click)="paginaCarrinho()"></i>
             <i class="pi pi-user navIcons"></i>
         </div>
     </div>
