--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -1,1 +1,27 @@
 <app-nav></app-nav>
+<div class="mainDiv">
+    <div class="mainGrid">
+        <div class="ladoEsquerdo">
+            <div class="cima">
+                <div class="fotoProduto"></div>        
+            </div>
+            <div class="campoFrete">
+                <p-inputNumber class="inputCep" placeholder="Calcular frete"></p-inputNumber>
+                <button pButton type="button" label="Calcular" class="btnCalculaCep"></button>
+            </div>
+        </div>
+        <div class="ladoDireito">
+            <div class="informacoesProduto">
+
+            </div>
+           
+            <div class="campoBtn">
+                <button 
+                pButton type="button" 
+                label="Adicionar carrinho" 
+                class="btnAddCarrinho"
+                ></button>
+            </div>
+        </div>
+    </div>
+</div>
