--- a/src/app/produto/produto.component.scss
+++ b/src/app/produto/produto.component.scss
@@ -1,3 +1,98 @@
 * {
     font-family: sans-serif;
 }
+
+.mainDiv {
+    width: 99.1vw;
+    height: 82vh;
+}
+
+.mainGrid {
+    padding-top: 5%;
+    width: 90%;
+    height: 90%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr)
+}
+
+.ladoEsquerdo {
+    padding-left: 5%;
+}
+
+.ladoDireito {
+    padding-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fotoProduto {
+    width: 100%;
+    height: 85%;
+    background-color:aliceblue
+}
+
+.campoFrete {
+    display: flex;
+    height: 35%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.inputCep {
+    height: 20%;
+    width: 70%;
+}
+
+.btnCalculaCep {
+    width: 25%;
+}
+
+.btnCalculaCep {
+    background-color: #FFB84D;
+    border-color: #fff;
+}
+
+.btnCalculaCep:hover {
+    background-color: #faab33;
+    border-color: #cecece;
+}
+
+.cima {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.informacoesProduto {
+    margin-top: 4%;
+    width: 80%;
+    height: 70%;
+    background-color:antiquewhite ;
+}
+
+.btnAddCarrinho {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.campoBtn {
+    margin-top: 5%;
+    width: 80%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+.btnAddCarrinho {
+    background-color: #FFB84D;
+    border-color: #fff;
+}
+
+.btnAddCarrinho:hover {
+    background-color: #faab33;
+    border-color: #cecece;
+}
