design feito de carrinho e pagina de produto, login e cadastro com design feito também, faltam algumas alterações no carrinho porém bem completo ja

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -7,17 +7,18 @@
                     <p class="titleCarrinho">Carrinho de Compras</p>
                 </div>
                 <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
                     <div class="itemText">
                         <p class="itemName">Creatina</p>
                     </div>
                     <div class="itemIcons">
-                        <i class="pi pi-info-circle carrinhoIcons"></i>
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
                         <i class="pi pi-trash carrinhoIcons"></i>
                     </div>
                 </div>
-            </div>
-            <div class="valorTotal">
-
             </div>
         </div>
         <div class="ladoDireito">
@@ -40,7 +41,9 @@
                 </div>
             </div>
             <div class="metodoPagamento">
-                <p class="metodoTitle">Métodos de pagamento: </p>
+                <div class="metodoBoxTitle">
+                    <p class="metodoTitle">Métodos de pagamento: </p>
+                </div>
                 <div class="metodos">
                     <div class="grupoIcons">
                         <i class="pi pi-paypal metodosIcons"></i>
