--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -3,7 +3,12 @@
     <div class="mainGrid">
         <div class="ladoEsquerdo">
             <div class="cima">
-                <div class="fotoProduto"></div>        
+                <div class="fotoProduto">
+                    <div class="iconsFoto">
+                        <i class="pi pi-angle-left seta"></i>
+                        <i class="pi pi-angle-right seta"></i>
+                    </div>
+                </div>        
             </div>
             <div class="campoFrete">
                 <p-inputNumber class="inputCep" placeholder="Calcular frete"></p-inputNumber>
@@ -12,7 +17,25 @@
         </div>
         <div class="ladoDireito">
             <div class="informacoesProduto">
-
+                <div class="cimaCarrinho">
+                    <div class="esquerdo">
+                        <div class="textoEsquerdo">
+                            <p class="nomeProduto textProd">Creatina</p>
+                            <p class="precoProduto textProd">100,00 R$</p>
+                            <p class="pesoProduto textProd">250 g</p>
+                        </div>
+                    </div>
+                    <div class="direito">
+                        <div class="notaProduto">
+                            <p class="numeroNota">4.7</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="baixoCarrinho">
+                    <div class="informacoesProdutoText">
+                        <p class="textInfo">A creatina serve como fonte de produção de energia para as células musculares, de modo que melhora a força e o tônus muscular.</p>
+                    </div>
+                </div>
             </div>
            
             <div class="campoBtn">
