--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -17,7 +17,7 @@
             </div>
             <button
              pButton type="button"
-             label="Click"
+             label="Comprar"
              class="btnAddCarrinho"
              (click)="paginaProdutos()"
                ></button>
