--- a/src/app/carrinho/carrinho.component.scss
+++ b/src/app/carrinho/carrinho.component.scss
@@ -28,17 +28,10 @@
 
 .listaCarrinhoDiv {
     width: 100%;
-    height: 70%;
-    background-color: aliceblue;
+    height: 80%;
+    // background-color: aliceblue;
     padding: 3%;
     border-radius: 1%;
-}
-
-.valorTotal {
-    margin-top: 5%;
-    width: 100%;
-    height: 20%;
-    background-color: antiquewhite;
 }
 
 .valorTotalDiv {
@@ -138,20 +131,21 @@
 
 .metodos {
     width: 100%;
+    margin-top: 5%;
 }
 
 .titleDiv {
-    width: 50%;
+    width: 100%;
     height: 13%;
     display: flex;
-    border-bottom: 3px solid #FFB84D;
+    justify-content: center;
 }
 
 .titleCarrinho {
     font-weight: bold;
     margin: 0;
     padding: 0;
-    font-size: 1.9em;
+    font-size: 1.6em;
     color: #03384C;
 }
 
@@ -166,27 +160,47 @@
 }
 
 .itemName {
-    font-size: 1.7em;
+    font-size: 1.5em;
     color: #03384C;
     font-weight: bold;
 }
 
 .itemText {
     width: 20%;
-    height: 130%;
+    height: 100%;
     border-bottom: 3px solid #FFB84D;
+    display: flex;
+    align-items: center;
+}
+
+.itemImage {
+    width: 18%;
+    height: 100%;
+    background-color: #d4d4d4;
 }
 
 .carrinhoIcons {
-    font-size: 1.7em;
-    padding: 9%;
+    font-size: 1em;
+    padding: 9%;    
     border-radius: 100%;
     background-color: #FFB84D;
     font-weight: bold;
 }
 
+// .carrinhoIconsNumber {
+//     border-radius: 100%;
+//     background-color: #FFB84D;
+//     font-weight: bold;
+// }
+
 .itemIcons {
-    width: 15%;
+    width: 25%;;
     display: flex;
     justify-content: space-between;
+}
+
+.metodoBoxTitle {
+    width: 80%;
+    height: 40%;
+    border-bottom: 3px solid #FFB84D;
 }
