--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,10 +1,10 @@
 <div class="flxNav">
     <div class="gridNav">
-        <div class="subFlex">
-            <i class="pi pi-align-justify navIcons menuIcon" onclick="openNav()"></i>
-        </div>
         <h1 class="GoFit">GoFit</h1>
-        <div>
+        <div class="navLinks">
+            <p class="linkNav" (click)="suplementos()">Suplementos</p>
+            <p class="linkNav">Acessórios</p>
+            <p class="linkNav">Roupas</p>
         </div>
         <div class="subFlex2">
             <i class="pi pi-shopping-cart navIcons" (click)="paginaCarrinho()"></i>
