--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -54,7 +54,7 @@
 
 .gridNav {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     width: 100%;
 }
 
@@ -77,4 +77,21 @@
 .searchInput {
     width: 100%;
     height: 2.3em;
+}
+
+.navLinks {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.linkNav {
+    font-size: 1.2em;
+    color: #03384C;
+    font-weight: bold;
+}
+
+.linkNav:hover {
+    border-bottom: 3px solid #FFB84D;
+    cursor: pointer;
 }
