cntraliza div suplementos

--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -8,20 +8,103 @@
     </span>
     </div>
     <div class="mainGrid">
-        <div class="box">
-            <div class="fotoProduto"></div>
-            <div class="informacoes">
-                <p class="nomeProduto">Creatina</p>
-                <p class="descProduto">250g</p>
-                <p class="precoProduto">100,00 R$</p>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
             </div>
-            <button
-             pButton type="button"
-             label="Comprar"
-             class="btnAddCarrinho"
-             (click)="paginaProdutos()"
-               ></button>
         </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Creatina</p>
+                    <p class="descProduto">250g</p>
+                    <p class="precoProduto">100,00 R$</p>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        
     </div>
 
 </div>
