--- a/src/app/suplementos/suplementos.component.scss
+++ b/src/app/suplementos/suplementos.component.scss
@@ -10,7 +10,14 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     width: 100%;
-    height: 100vh;
+    height: 100%;
+}
+
+.mainFlex {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
 
 .mainTitle {
