alterações em design de diversos components, principalmente em relação ao tamanho

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -19,6 +19,33 @@
                         <i class="pi pi-trash carrinhoIcons"></i>
                     </div>
                 </div>
+                <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
+                    <div class="itemText">
+                        <p class="itemName">Creatina</p>
+                    </div>
+                    <div class="itemIcons">
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
+                        <i class="pi pi-trash carrinhoIcons"></i>
+                    </div>
+                </div>
+                <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
+                    <div class="itemText">
+                        <p class="itemName">Creatina</p>
+                    </div>
+                    <div class="itemIcons">
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
+                        <i class="pi pi-trash carrinhoIcons"></i>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="ladoDireito">
