--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -33,6 +33,7 @@
                 </div>
                 <div class="baixoCarrinho">
                     <div class="informacoesProdutoText">
+                        <p class="descricaoTitle">Descrição</p>
                         <p class="textInfo">A creatina serve como fonte de produção de energia para as células musculares, de modo que melhora a força e o tônus muscular.</p>
                     </div>
                 </div>
