--- a/src/app/carrinho/carrinho.component.scss
+++ b/src/app/carrinho/carrinho.component.scss
@@ -32,6 +32,8 @@
     // background-color: aliceblue;
     padding: 3%;
     border-radius: 1%;
+    display: grid;
+    grid-template-rows: 1fr;
 }
 
 .valorTotalDiv {
@@ -154,7 +156,7 @@
     margin-top: 3%;
     display: flex;
     width: 100%;
-    height: 26%;
+    height: 100%;
     align-items: center;
     justify-content: space-between;
 }
