--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <div class="mainDiv">
-    <div class="mainGrid">
+    <div class="mainGridEsquerdo">
         <div class="ladoEsquerdo">
             <div class="listaCarrinhoDiv">
                 <div class="titleDiv">
@@ -45,47 +45,88 @@
                         <i class="pi pi-trash carrinhoIcons"></i>
                     </div>
                 </div>
+                <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
+                    <div class="itemText">
+                        <p class="itemName">Creatina</p>
+                    </div>
+                    <div class="itemIcons">
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
+                        <i class="pi pi-trash carrinhoIcons"></i>
+                    </div>
+                </div>
+                <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
+                    <div class="itemText">
+                        <p class="itemName">Creatina</p>
+                    </div>
+                    <div class="itemIcons">
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
+                        <i class="pi pi-trash carrinhoIcons"></i>
+                    </div>
+                </div>
+                <div class="itemList">
+                    <div class="itemImage">
+
+                    </div>
+                    <div class="itemText">
+                        <p class="itemName">Creatina</p>
+                    </div>
+                    <div class="itemIcons">
+                        <i class="pi pi-plus carrinhoIcons"></i>
+                        <i class="pi pi-minus carrinhoIcons"></i>
+                        <i class="pi pi-trash carrinhoIcons"></i>
+                    </div>
+                </div>
                 
             </div>
         </div>
-        <div class="ladoDireito">
-          <div class="valorTotalDiv">
-            <div class="titleBox">
-                <p class="valorTitle">Valor Total</p>
-            </div>
-            <div class="gridValoresTotais">
-                <div class="boxValorProd box">
-                    <p class="valorText">Valor produtos : </p>
-                    <p class="valorNumber">234,90 R$</p>
-                </div>
-                <div class="boxValorFrete box">
-                    <p class="valorText">Valor frete : </p>
-                    <p class="valorNumber">19,90 R$</p>
-                </div>
-                <div class="boxValorTotal box">
-                    <p class="valorText">Valor total : </p>
-                    <p class="valorNumber">254,80 R$</p>
-                </div>
-            </div>
-            <div class="metodoPagamento">
-                <div class="metodoBoxTitle">
-                    <p class="metodoTitle">Métodos de pagamento: </p>
-                </div>
-                <div class="metodos">
-                    <div class="grupoIcons">
-                        <i class="pi pi-paypal metodosIcons"></i>
-                        <i class="pi pi-credit-card metodosIcons"></i>
-                        <i class="pi pi-money-bill metodosIcons"></i>
-                        <i class="pi pi-qrcode metodosIcons"></i>
-                    </div>
-                </div>
-            </div>
-          </div>
-          <button 
-                pButton type="button" 
-                label="Finalizar Compra" 
-                class="btnFinalizarCompra"
-                ></button>
-        </div>
     </div>
+    <div class="mainGridDireito">
+    <div class="ladoDireito">
+        <div class="valorTotalDiv">
+          <div class="titleBox">
+              <p class="valorTitle">Valor Total</p>
+          </div>
+          <div class="gridValoresTotais">
+              <div class="boxValorProd box">
+                  <p class="valorText">Valor produtos : </p>
+                  <p class="valorNumber">234,90 R$</p>
+              </div>
+              <div class="boxValorFrete box">
+                  <p class="valorText">Valor frete : </p>
+                  <p class="valorNumber">19,90 R$</p>
+              </div>
+              <div class="boxValorTotal box">
+                  <p class="valorText">Valor total : </p>
+                  <p class="valorNumber">254,80 R$</p>
+              </div>
+          </div>
+          <div class="metodoPagamento">
+              <div class="metodoBoxTitle">
+                  <p class="metodoTitle">Métodos de pagamento: </p>
+              </div>
+              <div class="metodos">
+                  <div class="grupoIcons">
+                      <i class="pi pi-paypal metodosIcons"></i>
+                      <i class="pi pi-credit-card metodosIcons"></i>
+                      <i class="pi pi-money-bill metodosIcons"></i>
+                      <i class="pi pi-qrcode metodosIcons"></i>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <button 
+              pButton type="button" 
+              label="Finalizar Compra" 
+              class="btnFinalizarCompra"
+              ></button>
+      </div>
+      </div>
 </div>
