--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="subFlex2">
             <i class="pi pi-shopping-cart navIcons" (click)="paginaCarrinho()"></i>
-            <i class="pi pi-user navIcons"></i>
+            <i class="pi pi-user navIcons" (click)="paginaPerfil()"></i>
         </div>
     </div>
 </div>
