instalando tailwind no projeto

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="flxNav">
     <div class="gridNav">
-        <h1 class="GoFit">GoFit</h1>
+        <h1 class="GoFit font-bold">GoFit</h1>
         <div class="navLinks">
             <p class="linkNav" (click)="suplementos()">Suplementos</p>
             <p class="linkNav">Acessórios</p>
