mudanças na tela perfil, porem ainda incopleta

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -6,6 +6,17 @@
                 <i class="pi pi-user-edit iconUserEdit" ></i>
                 <p class="userName">Gustavo Gorge Koch</p>
             </div>
+            <div class="mt-16 w-full h-3/4">
+                <div>
+                    <input type="text" pInputText placeholder="Email" class="w-3/5 "/>
+                </div>
+                <div class="mt-16">
+                    <input type="text" pInputText placeholder="Senha" class="w-3/5 "/> 
+                </div>
+                <div class="mt-20">
+                    <button pButton type="button" label="Editar perfil" ></button>
+                </div>
+            </div>
         </div>
     </div>
         <div class="mainGridDireito">
