--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -2,26 +2,93 @@
 <div class="mainDiv">
     <div class="mainGridEsquerdo">
         <div class="ladoEsquerdo">
-            <div class="divNomeUsuario">
+            <div class="flex items-center w-1/4">
                 <i class="pi pi-user-edit iconUserEdit" ></i>
-                <p class="userName">Gustavo Gorge Koch</p>
+                <p class="text-3xl text-sky-900 font-bold ml-5">Dados Pessoais</p>
             </div>
-            <div class="mt-16 w-full h-3/4">
-                <div>
-                    <input type="text" pInputText placeholder="Email" class="w-3/5 "/>
+            <div class="mt-8 mb-5 w-4/5 h-1/3 grid grid-rows-3 grid-cols-3 bg-gray-200 p-5 rounded drop-shadow-sm">
+                <div class="flex flex-col justify-center items-center">
+                    <p>Email :</p>
+                    <input type="text" pInputText placeholder="gustavo_gorges@hotmail.com" class="w-3/5 "/>
                 </div>
-                <div class="mt-16">
-                    <input type="text" pInputText placeholder="Senha" class="w-3/5 "/> 
+                <div class="flex flex-col justify-center items-center ">
+                    <p>Senha :</p>
+                    <input type="text" pInputText placeholder="123456" class="w-3/5 "/> 
                 </div>
-                <div class="mt-20">
-                    <button pButton type="button" label="Editar perfil" ></button>
+                <div class="flex flex-col justify-center items-center ">
+                    <p>Nome :</p>
+                    <input type="text" pInputText placeholder="Gustavo" class="w-3/5 "/> 
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <p>Sobrenome :</p>
+                    <input type="text" pInputText placeholder="Gorges Koch" class="w-3/5 "/> 
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <p>CPF :</p>
+                    <input type="text" pInputText placeholder="07237791982" class="w-3/5 "/> 
+                </div>
+                <div class="flex flex-col justify-center items-center ">
+                    <p>Celular :</p>
+                    <input type="text" pInputText placeholder="51996066838" class="w-3/5 "/> 
+                </div>
+                <div class="flex justify-center items-center col-start-3 row-start-3">
+                    <div class="flex justify-center items-center">
+                        <button pButton type="button" label="Editar dados"></button>
+                    </div>
+                    <div class="flex justify-center items-center ml-11">
+                        <button pButton type="button" label="Salvar" ></button>
+                    </div>
+                </div>
+                
+                    
+                    
+                
+            </div>
+            <div class="flex items-center w-1/4">
+                <i class="pi pi-credit-card iconUserEdit" ></i>
+                <p class="text-3xl text-sky-900 font-bold ml-5">Pagamento</p>
+            </div>
+            <div class="mt-16 w-4/5 h-1/3 grid grid-rows-2 grid-cols-2">
+                <div class="">
+                    <p>Email :</p>
+                    <input type="text" pInputText placeholder="gustavo_gorges@hotmail.com" class="w-3/5 "/>
+                </div>
+                <div class="">
+                    <p>Senha :</p>
+                    <input type="text" pInputText placeholder="123456" class="w-3/5 "/> 
+                </div>
+                <div class="">
+                    <p>Nome :</p>
+                    <input type="text" pInputText placeholder="123456" class="w-3/5 "/> 
+                </div>
+                <div class="">
+                    <p>Sobrenome :</p>
+                    <input type="text" pInputText placeholder="123456" class="w-3/5 "/> 
                 </div>
             </div>
+            <div class="flex items-center w-1/4">
+                <i class="pi pi-home iconUserEdit" ></i>
+                <p class="text-3xl text-sky-900 font-bold ml-5">Endereço</p>
+            </div>
+            <div class="mt-16 w-4/5 h-1/3 grid grid-rows-2 grid-cols-2">
+                <div class="">
+                    <p>CEP :</p>
+                    <input type="text" pInputText placeholder="89252-000" class="w-3/5 "/>
+                </div>
+                <div class="">
+                    <p>Cidade :</p>
+                    <input type="text" pInputText placeholder="Jaraguá do Sul" class="w-3/5 "/> 
+                </div>
+                <div class="">
+                    <p>Rua :</p>
+                    <input type="text" pInputText placeholder="Rua Expedicionário Gumercindo da Silva" class="w-3/5 "/> 
+                </div>
+                <div class="">
+                    <p>Número :</p>
+                    <input type="text" pInputText placeholder="555" class="w-3/5 "/> 
+                </div>
+            </div>
+            
         </div>
     </div>
-        <div class="mainGridDireito">
-             <div class="ladoDireito">
-        
-            </div>
-        </div>
 </div>
