mudanças em design no perfil e em suplementos

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,8 +3,8 @@
         <h1 class="GoFit font-bold">GoFit</h1>
         <div class="navLinks">
             <p class="linkNav" (click)="suplementos()">Suplementos</p>
-            <p class="linkNav">Acessórios</p>
-            <p class="linkNav">Roupas</p>
+            <p class="linkNav" (click)="acessorios()">Acessórios</p>
+            <p class="linkNav" (click)="roupas()">Roupas</p>
         </div>
         <div class="subFlex2">
             <i class="pi pi-shopping-cart navIcons" (click)="paginaCarrinho()"></i>
