--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -13,18 +13,8 @@
                     <div class="itemText">
                         <p class="itemName">Creatina</p>
                     </div>
-                    <div class="itemIcons">
-                        <i class="pi pi-plus carrinhoIcons"></i>
-                        <i class="pi pi-minus carrinhoIcons"></i>
-                        <i class="pi pi-trash carrinhoIcons"></i>
-                    </div>
-                </div>
-                <div class="itemList">
-                    <div class="itemImage">
-
-                    </div>
-                    <div class="itemText">
-                        <p class="itemName">Creatina</p>
+                    <div>
+                        <p class="itemCategory p-2 bg-gray-200 rounded text-sm">suplementos</p>
                     </div>
                     <div class="itemIcons">
                         <i class="pi pi-plus carrinhoIcons"></i>
@@ -39,18 +29,8 @@
                     <div class="itemText">
                         <p class="itemName">Creatina</p>
                     </div>
-                    <div class="itemIcons">
-                        <i class="pi pi-plus carrinhoIcons"></i>
-                        <i class="pi pi-minus carrinhoIcons"></i>
-                        <i class="pi pi-trash carrinhoIcons"></i>
-                    </div>
-                </div>
-                <div class="itemList">
-                    <div class="itemImage">
-
-                    </div>
-                    <div class="itemText">
-                        <p class="itemName">Creatina</p>
+                    <div>
+                        <p class="itemCategory p-2 bg-gray-200 rounded text-sm">suplementos</p>
                     </div>
                     <div class="itemIcons">
                         <i class="pi pi-plus carrinhoIcons"></i>
@@ -63,7 +43,10 @@
 
                     </div>
                     <div class="itemText">
-                        <p class="itemName">Creatina</p>
+                        <p class="itemName">Camisa G</p>
+                    </div>
+                    <div>
+                        <p class="itemCategory p-2 bg-gray-200 rounded text-sm">roupas</p>
                     </div>
                     <div class="itemIcons">
                         <i class="pi pi-plus carrinhoIcons"></i>
@@ -76,7 +59,10 @@
 
                     </div>
                     <div class="itemText">
-                        <p class="itemName">Creatina</p>
+                        <p class="itemName">Strap</p>
+                    </div>
+                    <div>
+                        <p class="itemCategory p-2 bg-gray-200 rounded text-sm">acessórios</p>
                     </div>
                     <div class="itemIcons">
                         <i class="pi pi-plus carrinhoIcons"></i>
