--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -6,7 +6,7 @@
                 <i class="pi pi-user-edit iconUserEdit"></i>
                 <p class="text-3xl text-sky-900 font-bold ml-5">Dados Pessoais</p>
             </div>
-            <div class="mt-8 mb-5 w-4/5 h-1/3 grid grid-rows-3 grid-cols-3 bg-gray-200 p-5 rounded drop-shadow-sm">
+            <div class="mt-8 mb-5 w-full h-1/3 grid grid-rows-3 grid-cols-3 bg-gray-100 p-5 rounded drop-shadow-sm">
                 <div class="flex flex-col justify-center items-center">
                     <p>Email :</p>
                     <input type="text" pInputText placeholder="gustavo_gorges@hotmail.com" class="w-3/5 " />
@@ -49,9 +49,10 @@
                 <p class="text-3xl text-sky-900 font-bold ml-5">Pagamento</p>
             </div>
             <div class="mt-16 w-full gap-x-10 h-1/4 grid grid-cols-3">
+                <div class="flex justify-center">
                 <div class="bg-slate-100 w-4/5 h-full p-5">
                     <h1 class="text-2xl">Cartão de Credito</h1>
-                    <div class="h-32 w-2/3 bg-gray-500 mt-5"></div>
+                    <div class="h-32 w-2/3 bg-gray-500 mt-5 rounded"></div>
                     <div class="pt-5">
                         <p>Numero : ****** 321</p>
                         <p>Titular : Gustavo Gorges Koch</p>
@@ -59,9 +60,11 @@
                     </div>
 
                 </div>
+            </div>
+            <div class="flex justify-center">
                 <div class="bg-slate-100 w-4/5 h-full p-5">
                     <h1 class="text-2xl">Cartão de Credito</h1>
-                    <div class="h-32 w-2/3 bg-gray-500 mt-5"></div>
+                    <div class="h-32 w-2/3 bg-gray-500 mt-5 rounded"></div>
                     <div class="pt-5">
                         <p>Numero : ****** 321</p>
                         <p>Titular : Gustavo Gorges Koch</p>
@@ -69,15 +72,18 @@
                     </div>
 
                 </div>
+            </div>
+            <div class="flex justify-center">
                 <div class="bg-slate-100 w-4/5 h-full p-5 flex justify-center items-center">
                     <p-button icon="pi pi-plus" class="addCardBtn" styleClass="p-button-rounded p-button-text"></p-button>
                 </div>
+            </div>
             </div>
             <div class="flex items-center w-1/4 mt-10">
                 <i class="pi pi-home iconUserEdit"></i>
                 <p class="text-3xl text-sky-900 font-bold ml-5">Endereço</p>
             </div>
-            <div class="mt-16 w-4/5 h-1/3 grid grid-rows-3 grid-cols-2 bg-gray-200 p-5 rounded drop-shadow-sm">
+            <div class="mt-16 w-full h-1/3 grid grid-rows-3 grid-cols-2 bg-gray-100 p-5 rounded drop-shadow-sm">
                 <div class="">
                     <p>CEP :</p>
                     <input type="text" pInputText placeholder="89252-000" class="w-3/5 " />
