--- a/src/app/perfil/perfil.component.scss
+++ b/src/app/perfil/perfil.component.scss
@@ -24,7 +24,9 @@
 }
 
 .ladoEsquerdo {
-    padding-left: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .ladoDireito {
