--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -15,6 +15,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
@@ -31,6 +36,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
@@ -47,6 +57,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
@@ -63,6 +78,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
@@ -79,6 +99,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
@@ -95,6 +120,11 @@
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
                     <p class="precoProduto">100,00 R$</p>
+                    <div class="flex justify-between w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded ">neurológico</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                        <p class="p-1 bg-gray-200 rounded ">desempenho</p>
+                    </div>
                 </div>
                 <button
                  pButton type="button"
