adiciona páginas de produto e termina paginas de roupa e acessorios

--- a/src/app/acessorios/acessorios.component.html
+++ b/src/app/acessorios/acessorios.component.html
@@ -8,8 +8,125 @@
     </span>
     </div>
     <div class="mainGrid">
-        
-        
-    </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProdutos()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Strap</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">53,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-1 bg-gray-200 rounded mr-4">cadência</p>
+                        <p class="p-1 bg-gray-200 rounded ">força</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
 
 </div>
