--- a/src/app/roupas/roupas.component.html
+++ b/src/app/roupas/roupas.component.html
@@ -1,1 +1,139 @@
 <app-nav></app-nav>
+<div class="mainDiv">
+    <div class="tituloFiltro">
+        <h1 class="mainTitle">Roupas</h1>
+        <span class="p-input-icon-right">
+            <i class="pi pi-filter"></i>
+            <input type="text" pInputText class="filterInput" placeholder="Filtrar" />
+    </span>
+    </div>
+    <div class="mainGrid">
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 (click)="paginaProduto()"
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+        <div class="mainFlex">
+            <div class="box">
+                <div class="fotoProduto"></div>
+                <div class="informacoes">
+                    <p class="nomeProduto">Regata</p>
+                    <p class="descProduto"></p>
+                    <p class="precoProduto">55,90 R$</p>
+                    <div class="flex w-full mt-5">
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">P</p>
+                        <p class="p-2 bg-gray-200 rounded-full mr-3">M</p>
+                        <p class="p-2 bg-gray-200 rounded-full ">G</p>
+                    </div>
+                </div>
+                <button
+                 pButton type="button"
+                 label="Comprar"
+                 class="btnAddCarrinho"
+                 
+                   ></button>
+            </div>
+        </div>
+       
+
+</div>
