--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -6,7 +6,7 @@
                 <i class="pi pi-user-edit iconUserEdit"></i>
                 <p class="text-3xl text-sky-900 font-bold ml-5">Dados Pessoais</p>
             </div>
-            <div class="mt-8 mb-5 w-full h-1/3 grid grid-rows-3 grid-cols-3 bg-gray-100 p-5 rounded drop-shadow-sm">
+            <div class="mt-8 mb-5 w-full h-1/3 grid grid-rows-3 grid-cols-3 bg-gray-100 p-5 rounded drop-shadow-sm gap-y-5">
                 <div class="flex flex-col justify-center items-center">
                     <p>Email :</p>
                     <input type="text" pInputText placeholder="gustavo_gorges@hotmail.com" class="w-3/5 " />
@@ -83,7 +83,7 @@
                 <i class="pi pi-home iconUserEdit"></i>
                 <p class="text-3xl text-sky-900 font-bold ml-5">Endereço</p>
             </div>
-            <div class="mt-16 w-full h-1/3 grid grid-rows-3 grid-cols-2 bg-gray-100 p-5 rounded drop-shadow-sm">
+            <div class="mt-10 w-full h-1/3 grid grid-rows-3 grid-cols-2 bg-gray-100 p-5 rounded drop-shadow-sm gap-y-5">
                 <div class="">
                     <p>CEP :</p>
                     <input type="text" pInputText placeholder="89252-000" class="w-3/5 " />
