criação da página de cadastro porém ainda sem lógica, e design sujeito a mudanças

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,37 +13,15 @@
                     <a href="#" class="recuperarSenha">Esqueci minha senha</a>
                 </div>
             </div>
-            <div class="divBtnLogin">
+            <div class="divBtnLogin h-1/6">
                 <button
                  pButton 
                  type="button"
                   label="Login"
                    class="btnLogin"
-                   (click)="logar()" ></button>
-            </div>
-        </div>
-        <div class="ladoCadastro">
-            <p class="titleLogin">Criar Conta</p>
-            <div class="inputsCadastro">
-                <div class="divNome divsLoginCadastro">
-                    <p>Nome Completo : </p>
-                    <input type="text" pInputText class="inputNome inputsLoginCadastro"/>
-                </div>
-                <div class="divEmail divsLoginCadastro">
-                    <p>E-mail : </p>
-                    <input type="text" pInputText class="inputEmail inputsLoginCadastro"/>
-                </div>
-                <div class="divSenha divsLoginCadastro">
-                    <p>Senha : </p>
-                    <input type="text" pInputText class="inputSenha"/>
-                </div>
-            </div>
-            <div class="divBtnLogin">
-                <button 
-                pButton type="button" 
-                label="Criar conta" 
-                class="btnLogin" 
-                ></button>
+                   (click)="logar()" >
+                </button>
+                <a (click)="paginaCadastro()">Não possui cadastro ? Cadastre-se aqui !</a>
             </div>
         </div>
     </div>
