--- a/src/app/suplementos/suplementos.component.html
+++ b/src/app/suplementos/suplementos.component.html
@@ -10,7 +10,7 @@
     <div class="mainGrid">
         <div class="mainFlex">
             <div class="box">
-                <div class="fotoProduto"></div>
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
@@ -31,7 +31,7 @@
         </div>
         <div class="mainFlex">
             <div class="box">
-                <div class="fotoProduto"></div>
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="mainFlex">
             <div class="box">
-                <div class="fotoProduto"></div>
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
@@ -73,7 +73,7 @@
         </div>
         <div class="mainFlex">
             <div class="box">
-                <div class="fotoProduto"></div>
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="mainFlex">
             <div class="box">
-                <div class="fotoProduto"></div>
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
@@ -114,8 +114,8 @@
             </div>
         </div>
         <div class="mainFlex">
-            <div class="box">
-                <div class="fotoProduto"></div>
+            <div class="box"> 
+                <div class="fotoProduto hover:scale-110"></div>
                 <div class="informacoes">
                     <p class="nomeProduto">Creatina</p>
                     <p class="descProduto">250g</p>
