--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -12,25 +12,18 @@
 .boxLogin {
     width: 80%;
     height: 80%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    // display: grid;
+    // grid-template-columns: repeat(2, 1fr);
     //background-color: #d4d4d4;
 }
 
 .ladoLogin {
     display: flex;
-    width: 100%;
+    width: 50%;
     height: 100%;
-    border-right: 2px solid #d4d4d4;
-    flex-direction: column;
-    align-items: center;
-}
-
-.ladoCadastro {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    border-left: 2px solid #d4d4d4;
     flex-direction: column;
     align-items: center;
 }
